@@ -1,4 +1,4 @@
 module Cocard
   VERSION     = '0.8.5-dev'.freeze
-  RELEASEDATE = '2025-08-17'.freeze
+  RELEASEDATE = '2025-08-21'.freeze
 end
