@@ -228,6 +228,18 @@
 <article class="doc">
 <h1 class="page">Changelog</h1>
 <div class="sect1">
+<h2 id="_0_8_5_dev_unreleased"><a class="anchor" href="#_0_8_5_dev_unreleased"></a>0.8.5-dev - unreleased</h2>
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p>Kartenterminal: trennt man den Konnektor, wird die CT_ID und die vom Konnektor gefundene IP gelöscht.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_0_8_4_2025_08_17"><a class="anchor" href="#_0_8_4_2025_08_17"></a>0.8.4 - 2025-08-17</h2>
 <div class="sectionbody">
 <div class="ulist">
